# agent-harness

./: .gitignore  Makefile  README.md  WALKTHROUGH.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/agents/: base_agent.py
backend/agents/critic/: agent_card.json  executor.py  main.py  prompts.py
backend/agents/data_analyst/: agent_card.json  executor.py  main.py  prompts.py
backend/agents/orchestrator/: agent_card.json  executor.py  main.py  prompts.py
backend/agents/researcher/: agent_card.json  executor.py  main.py  prompts.py  web_search.py
backend/agents/writer/: agent_card.json  executor.py  main.py  prompts.py
backend/gateway/: main.py  pipeline_runner.py  routes.py  websocket_manager.py
backend/knowledge_base/: __init__.py  composite_builder.py  extractor.py  store.py  style_analyzer.py
backend/shared/: a2a_helpers.py  config.py  gemini_client.py  models.py  token_tracker.py
backend/tests/: test_critic_scoring.py  test_kb_composite_builder.py  test_kb_extractor.py  test_pipeline_integration.py
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ArticleRenderer.tsx  ArtifactEmbed.tsx  ChartEmbed.tsx  KnowledgeBasePanel.tsx  MessageStream.tsx  PipelineDAG.tsx  PromptInput.tsx  QualityScores.tsx  StyleProfileViewer.tsx  TokenTracker.tsx
frontend/src/hooks/: usePipeline.ts  useWebSocket.ts
frontend/src/lib/: api.ts  constants.ts  types.ts
frontend/src/types/: react-plotly.d.ts
scripts/: seed_test.sh  start_all.sh
